[package]
name = "web_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5.0"
error-chain = "0.12.4"
async-recursion = "1.0.0"
eyre = "0.6"
